---------------------------------------------------------------------------------------------------
Version: 5.3.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.3.2
Date: 2020-11-26
  Features:
    - Added the ability to load presets into the spidertron:
      - Presets are the same as the players presets
      - You can save the spidertrons current logistic requests as a preset
      - Holding shift when clicking on a preset adds it to the current requests. This allows combining multiple presets
---------------------------------------------------------------------------------------------------
Version: 5.3.1
Date: 2020-11-24
  Changes:
    - Removed the (+/-) buttons, a new row will be added if something is put in the last row
  Bugfixes:
    - Fixed error when adding AutoTrash to an existing save
---------------------------------------------------------------------------------------------------
Version: 5.3.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.2.16
Date: 2020-11-21
  Changes:
    - Added shortcut to toggle the AutoTrash gui
    - Added mod setting to hide the button in the top left
    - Removed commands /at_show and /at_hide
---------------------------------------------------------------------------------------------------
Version: 5.2.15
Date: 2020-11-20
  Bugfixes:
    - Fixed gui buttons becoming unresponsive.
---------------------------------------------------------------------------------------------------
Version: 5.2.14
Date: 2020-11-18
  Changes:
    - Sliders change the amount by one stack at a time.
    - Added support for multiple main networks.
---------------------------------------------------------------------------------------------------
Version: 5.2.13
Date: 2020-11-08
  Bugfixes: